* fixed TCU GUI tab label renderer (again)  * blocked upgrade slots should now render properly (hopefully)  * added crafting recipe for Minigun Shells  * Turret Assembly Recipes now allow the '*' wildcard at the end for oredict names  * added translated names to the Misc and Info categories  * fixed format error on Assembly Speed Upgrade and Reload II Upgrade descriptions

--- a/resources/assets/sapturretmod/lang/en_US.lang
+++ b/resources/assets/sapturretmod/lang/en_US.lang
@@ -25,7 +25,7 @@ item.sapturretmod:turret_assembly_auto.ttip=Used in the Turret Assembly Table
 item.sapturretmod:turret_assembly_auto.desc=This enables automation of the assembly table. Once this is applied, a button will appear where you can toggle the assembly table between manual and automation mode.\n\nIn manual mode it will act like you're used to, crafting items on your command.\n\nIn automation mode, you can tell it to craft a specific item. Once the items and the power are sufficiently available, it'll start crafting and keep crafting it until it runs out of ingredients, energy or space in the output.\nYou cannot change the item crafted until you cancel it.
 item.sapturretmod:turret_assembly_speed.name=Speed Upgrade
 item.sapturretmod:turret_assembly_speed.ttip=Used in the Turret Assembly Table
-item.sapturretmod:turret_assembly_speed.desc=This optimizes the assembly process and makes the assembly table 4x faster. Since this optimization isn't free to come by, it'll increase the energy consumption of the current crafting operation by 10% .
+item.sapturretmod:turret_assembly_speed.desc=This optimizes the assembly process and makes the assembly table 4x faster. Since this optimization isn't free to come by, it'll increase the energy consumption of the current crafting operation by 10%% .
 item.sapturretmod:turret_assembly_filter.name=Filter Upgrade
 item.sapturretmod:turret_assembly_filter.ttip=Used in the Turret Assembly Table
 item.sapturretmod:turret_assembly_filter.desc=With this upgrade you can §3filter§0 what's gointg into the assembly table.\nAfter §3right-clicking§0 you can configure the filter. In empty slots can go anything. In configured slots can only go the item configured (obviously), but those items §3won't go anywhere else§0, not even in empty configured slots.\n§3Shift-right-click§0 clears the filter.\n\nThe filter operates not only on the user-side of things (putting stuff into the table via GUI) but also with external insertion devices like the hopper.\n\nPlease note that you can't configure the stack size of items, thus it will always try to put a §3whole stack§0 in a slot. \n\nf you want to put in more than 1 stack into the table, it's advised to configure 2 or more slots with the same item.
@@ -66,7 +66,7 @@ item.sapturretmod:turret_upgrade.health_iv.desc=Increases the maximum turret §3
 item.sapturretmod:turret_upgrade.reload_i.name=Reload I
 item.sapturretmod:turret_upgrade.reload_i.desc=When the turret shoots too slow, use this! It decreases the §3reload time by 15%%§0.\nBe careful with faster shooting turrets, the immunity time caused by damage on targets may last longer than the time to reload, thus wasting ammunition.
 item.sapturretmod:turret_upgrade.reload_ii.name=Reload II
-item.sapturretmod:turret_upgrade.reload_ii.desc=This decreases the §3reload time§0 by an additional §335%%§0 (50% overall) for an even faster shooting turret.
+item.sapturretmod:turret_upgrade.reload_ii.desc=This decreases the §3reload time§0 by an additional §335%%§0 (50%% overall) for an even faster shooting turret.
 item.sapturretmod:turret_upgrade.upg_storage_i.name=Upgrade Storage I
 item.sapturretmod:turret_upgrade.upg_storage_i.desc=Need more upgrades for your turret but don't have any space? Use this, as it will increases the available §3upgrade slots by 9§0.
 item.sapturretmod:turret_upgrade.upg_storage_ii.name=Upgrade Storage II
@@ -110,8 +110,8 @@ gui.sapturretmod.tinfo.infoTitle=Info about this mod
 gui.sapturretmod.tinfo.category.turrets.name=Turrets
 gui.sapturretmod.tinfo.category.ammo.name=Ammunition
 gui.sapturretmod.tinfo.category.upgrades.name=Upgrades
-gui.sapturretmod.tinfo.category.upgrades.name=Upgrades
-gui.sapturretmod.tinfo.category.upgrades.name=Upgrades
+gui.sapturretmod.tinfo.category.misc.name=Miscellaneous
+gui.sapturretmod.tinfo.category.info.name=About
 gui.sapturretmod.tinfo.health=Health
 gui.sapturretmod.tinfo.range=Range
 gui.sapturretmod.tinfo.ammocap=Ammo Capacity
