--- a/resources/assets/sapturretmod/lang/en_US.lang
+++ b/resources/assets/sapturretmod/lang/en_US.lang
@@ -19,32 +19,47 @@ item.sapturretmod:turret_control_unit.name.2=TCU (Turret Corrosion Unity)
 item.sapturretmod:turret_control_unit.name.3=TCU (Trigger Capacity Uranus)
 item.sapturretmod:turret_control_unit.name.4=TCU (Timmy Cleans Utilities)
 item.sapturretmod:turret_control_unit.name.5=TCU (Transient Colossal Uppercut)
-item.sapturretmod:turret_control_unit.desc=This item is a configuration and info tool for placed turrets and one of the essentials.\n\nLooking at a turret with this tool in hand shows an info label above the turret with information about its name, health and ammo.\n\nRight-Clicking a turret with it will open a GUI that lets you see detailed info and configure the turret, like targets and upgrades.
+item.sapturretmod:turret_control_unit.desc=This item is a configuration and info tool for placed turrets.\n\nLooking at a turret with this tool in hand shows an info label on it with information about its name, health and ammo.\n\nRight-Clicking a turret with it will open a GUI that lets you see detailed info and configure it, like targets and upgrades.
 item.sapturretmod:turret_assembly_auto.name=Automation Upgrade
 item.sapturretmod:turret_assembly_auto.ttip=Used in the Turret Assembly Table
-item.sapturretmod:turret_assembly_auto.desc=This enables automation of the assembly table. Once this is applied, a button will appear where you can toggle the assembly table between manual and automation mode.\n\nIn manual mode it will act like you're used to, crafting items on your command.\n\nIn automation mode, you can tell it to craft a specific item. Once the items and the power are sufficiently available, it'll start crafting and keep crafting it until it runs out of ingredients, energy or space in the output.\nYou cannot change the item crafted until you cancel it.
+item.sapturretmod:turret_assembly_auto.desc=This enables automation of the assembly table. Once this is applied, a button will appear where you can toggle the assembly table between manual and automation mode.\n\nIn manual mode it will act like without the upgrade, crafting items on your command.\n\nIn automation mode, you can tell it to craft a specific item. Once the items and the power are available, it'll start crafting and keep crafting until it runs out of ingredients, energy or space in the output slot.\nYou cannot change the item crafted until you cancel it.
 item.sapturretmod:turret_assembly_speed.name=Speed Upgrade
 item.sapturretmod:turret_assembly_speed.ttip=Used in the Turret Assembly Table
-item.sapturretmod:turret_assembly_speed.desc=This optimizes the assembly process and makes the assembly table 4x faster. Since this optimization isn't free to come by, it'll increase the energy consumption of the current crafting operation by 10%% .
+item.sapturretmod:turret_assembly_speed.desc=This optimizes the assembly process and makes the assembly table 4x faster. Since this optimization isn't free to come by, it'll increase the energy consumption of the current crafting operation by 10%% (after the 4x increase of RF/t).
 item.sapturretmod:turret_assembly_filter.name=Filter Upgrade
 item.sapturretmod:turret_assembly_filter.ttip=Used in the Turret Assembly Table
-item.sapturretmod:turret_assembly_filter.desc=With this upgrade you can filter what's gointg into the assembly table.\nAfter right-clicking you can configure the filter. In empty slots can go anything. In configured slots can only go the item configured (obviously), but those items won't go anywhere else, not even in empty configured slots.\nShift-right-click clears the filter.\n\nThe filter operates not only on the user-side of things (putting stuff into the table via GUI) but also with external insertion devices like the hopper.\n\nPlease note that you can't configure the stack size of items, thus it will always try to put a whole stack in a slot. \n\nf you want to put in more than 1 stack into the table, it's advised to configure 2 or more slots with the same item.
+item.sapturretmod:turret_assembly_filter.desc=This will filter what's going into the assembly table.\nAfter right-clicking you can configure the filter. In empty slots can go anything. In configured slots can only go the item configured (obviously), but those items won't go anywhere else, not even in empty configured slots.\nShift-right-click clears the filter.\n\nThe filter operates not only on the user-side of things (putting stuff into the table via GUI) but also with external insertion devices like the hopper.\n\nPlease note that you can't configure the stack size of items, thus it will always try to put a whole stack (depends on how many items can be stacked together) in a slot.\n\nf you want to put in more than 1 stack into the table, you can configure 2 or more slots with the same item.
 item.sapturretmod:turret_assembly_filter.conf=Configured
 item.sapturretmod:turret_assembly_filter.inst=Right-click to configure, Shift-right-click to clear config.
+
 item.sapturretmod:turret_ammo.arrow_sng.name=Arrow Bolt
 item.sapturretmod:turret_ammo.arrow_lrg.name=Arrow Bolt Pack
+sapturretmod.tinfo.ammo.arrow.name=Arrow Bolt
+sapturretmod.tinfo.ammo.arrow.desc=The standard ammo for the Crossbow Turret. Has a tiny knockback effect and acts like a standard arrow, just smaller. Very precise.\n\nCan be
 item.sapturretmod:turret_ammo.sgshell_sng.name=Shotgun Shell
 item.sapturretmod:turret_ammo.sgshell_lrg.name=Shotgun Shell Pack
+sapturretmod.tinfo.ammo.sgshell.name=Shotgun Shell
+sapturretmod.tinfo.ammo.sgshell.desc=The standard ammo for the Shotgun Turret. Has no knockback effect and turns into 6 dispersed pebble projectiles when shot.\nDoes not apply any immunity to the target, thus targets hit by multiple pebbles will take damage from all of them.\n\nCan be packaged, whose items will provide 16x ammo.
 item.sapturretmod:turret_ammo.cryocell_1.name=Cryo Cell SG1
 item.sapturretmod:turret_ammo.cryocell_pack_1.name=Cryo Cell SN1 Pack
 item.sapturretmod:turret_ammo.cryocell_2.name=Cryo Cell SG2
 item.sapturretmod:turret_ammo.cryocell_pack_2.name=Cryo Cell SN2 Pack
 item.sapturretmod:turret_ammo.cryocell_3.name=Cryo Cell SG3
 item.sapturretmod:turret_ammo.cryocell_pack_3.name=Cryo Cell SN3 Pack
+sapturretmod.tinfo.ammo.cryocell.name=Cryo Cell
+sapturretmod.tinfo.ammo.cryocell.desc=This ammunition used by the Cryolator Turret comes in 3 versions, which applies different slowness effects:\nCell SG1: Slowness I for 15s\nCell SG2: Slowness III for 10s\nCell SG3: Slowness V for 5s.\n\nDoes not apply immunity and any damage to the target.\n\nCan be packaged, whose items will provide 16x ammo.
 item.sapturretmod:turret_ammo.bullet_sng.name=Revolver Bullets
 item.sapturretmod:turret_ammo.bullet_lrg.name=Revolver Bullet Pack
+sapturretmod.tinfo.ammo.bullet.name=Revolver Bullets
+sapturretmod.tinfo.ammo.bullet.desc=Used by the Revolver Turret, it has the same knockback effect like the Shotgun projectiles, but do more damage than the Arrow bolts from the Crossbow Turret. Unlike other ammo types, this provides double the rounds.
 item.sapturretmod:turret_ammo.mgshell_sng.name=Minigun Rounds
 item.sapturretmod:turret_ammo.mgshell_lrg.name=Minigun Rounds Pack
+sapturretmod.tinfo.ammo.mgshell.name=Minigun Rounds
+sapturretmod.tinfo.ammo.mgshell.desc=This ammo contains seeds, which are shot by the Minigun Turret. On their own they do little damage and no knockback, but like the shotgun pebbles, they do not apply any immunity to the target. This, in combination with the rapid firing rate of the turret, compensate for their weakness.
+item.sapturretmod:turret_ammo.ecell_sng.name=Flux Cell
+item.sapturretmod:turret_ammo.ecell_lrg.name=Flux Cell Pack
+sapturretmod.tinfo.ammo.ecell.name=Flux Cell
+sapturretmod.tinfo.ammo.ecell.desc=Provides energy to the laser turret to shoot its lasers. Lasers have no knockback effect and don't damage anything immune to fire (unless upgraded), but deal a quite decent amount of damage and also sets the target on fire for 5 seconds.
 
 item.sapturretmod:turret_repair_kit.standard_1.name=Repair Kit 05HS
 item.sapturretmod:turret_repair_kit.standard_2.name=Repair Kit 10HS
@@ -56,17 +71,17 @@ item.sapturretmod:turret_upgrade.name=Turret Upgrade
 item.sapturretmod:turret_upgrade.empty.name=Empty
 item.sapturretmod:turret_upgrade.empty.desc=This is the crafting base for all other upgrades. Not applicable to anything.
 item.sapturretmod:turret_upgrade.health_i.name=Health I
-item.sapturretmod:turret_upgrade.health_i.desc=Increases the maximum turret health by 25%%.\nIt will not increase the turrets health automatically! You must heal it afterwards.
+item.sapturretmod:turret_upgrade.health_i.desc=This increases the maximum turret health by 25%%.\nIt will not increase the turrets health automatically! You must heal it afterwards.
 item.sapturretmod:turret_upgrade.health_ii.name=Health II
-item.sapturretmod:turret_upgrade.health_ii.desc=Increases the maximum turret health by 25%% for 50%% total increase.
+item.sapturretmod:turret_upgrade.health_ii.desc=This increases the maximum turret health by 25%% for 50%% total increase.
 item.sapturretmod:turret_upgrade.health_iii.name=Health III
-item.sapturretmod:turret_upgrade.health_iii.desc=Increases the maximum turret health by 25%% for 75%% total increase.
+item.sapturretmod:turret_upgrade.health_iii.desc=This increases the maximum turret health by 25%% for 75%% total increase.
 item.sapturretmod:turret_upgrade.health_iv.name=Health IV
-item.sapturretmod:turret_upgrade.health_iv.desc=Increases the maximum turret health by 25%% for 100%% total increase.
+item.sapturretmod:turret_upgrade.health_iv.desc=This increases the maximum turret health by 25%% for 100%% total increase.
 item.sapturretmod:turret_upgrade.reload_i.name=Reload I
-item.sapturretmod:turret_upgrade.reload_i.desc=When the turret shoots too slow, use this! It decreases the reload time by 15%%.\nBe careful with faster shooting turrets, the immunity time caused by damage on targets may last longer than the time to reload, thus wasting ammunition.
+item.sapturretmod:turret_upgrade.reload_i.desc=When the turret shoots too slow for you, use this! It decreases the reload time by 15%%.\nBe careful with faster shooting turrets, mobs that get hit will get some kind of immunity aura that usually lasts a second. Those with that aura won't get hurt, thus wasting ammunition.
 item.sapturretmod:turret_upgrade.reload_ii.name=Reload II
-item.sapturretmod:turret_upgrade.reload_ii.desc=This decreases the reload time by an additional 35%% (50%% overall) for an even faster shooting turret.
+item.sapturretmod:turret_upgrade.reload_ii.desc=For even faster turrets, this decreases the reload time by an additional 35%% (50%% overall).
 item.sapturretmod:turret_upgrade.upg_storage_i.name=Upgrade Storage I
 item.sapturretmod:turret_upgrade.upg_storage_i.desc=Need more upgrades for your turret but don't have any space? Use this, as it will increases the available upgrade slots by 9.
 item.sapturretmod:turret_upgrade.upg_storage_ii.name=Upgrade Storage II
@@ -78,35 +93,26 @@ item.sapturretmod:turret_upgrade.ammo_storage.desc=If you're tired of your turre
 item.sapturretmod:turret_upgrade.smart_tgt.name=Smart Targeting
 item.sapturretmod:turret_upgrade.smart_tgt.desc=Essentially, this upgrade makes turrets aware of the targets from others and not targeting those for themselves.\nTurrets within the range of the turret holding this upgrade will be accounted for.
 item.sapturretmod:turret_upgrade.use_decr_i.name=Economy I
-item.sapturretmod:turret_upgrade.use_decr_i.desc=If you think ammo is too expensive to make, then this upgrade will help you out! A turret with this upgrade has a chance of 10%% of not consuming ammo (so on average, it uses 10%% less ammo).
+item.sapturretmod:turret_upgrade.use_decr_i.desc=If you think ammo is too expensive to make, then this upgrade will help you out! A turret with this has a chance of 10%% to not consume ammo (so in other words, on average, it uses 10%% less ammo).
 item.sapturretmod:turret_upgrade.use_decr_ii.name=Economy II
 item.sapturretmod:turret_upgrade.use_decr_ii.desc=Like its required upgrade, this lets turrets preserve ammo. This increases the chance of doing so to 35%% .
 item.sapturretmod:turret_upgrade.use_decr_inf.name=Infinitas Oeconomia
-item.sapturretmod:turret_upgrade.use_decr_inf.desc=You want unlimited ammo? This upgrade recreates ammo automatically and infinitely, so you'll never run out of it! There's a catch though: The turret must be filled to the max with rounds, or otherwise it will resort to the other Economy upgrades to reduce ammo usage.
+item.sapturretmod:turret_upgrade.use_decr_inf.desc=You want unlimited ammo? This upgrade recreates ammo automatically and infinitely by using the Infinity enchantment of the bow, so you'll never run out of it! There's a catch though: The turret must be filled to the max with rounds, or otherwise it will resort to the other Economy upgrades to reduce ammo usage.
 item.sapturretmod:turret_upgrade.ender_medium.name=Ender Gain Medium
-item.sapturretmod:turret_upgrade.ender_medium.desc=Laser turrets are cool, but since they deal fire based damage, they can't damage anything that is immune to fire. This upgrade replaces the standard redstone based gain medium with an ender pearl based one. The new frequency of the laser fired will inflict damage to anything with fire immunity and also does 25% bonus damage to everything else.
+item.sapturretmod:turret_upgrade.ender_medium.desc=Laser turrets are cool, but since they deal fire based damage, they can't damage anything that is immune to fire. This upgrade replaces the standard redstone based gain medium with an ender pearl based one. The new frequency of the laser fired will inflict damage to anything with fire immunity and also does 25%% bonus damage to everything else.
 
 entity.sapturretmod.turret_i_crossbow.name=Crossbow Turret (T1)
-entity.sapturretmod.turret_i_crossbow.desc=A turret meant for basic defense and beginners. Not very strong but one of the cheapest to make.
+entity.sapturretmod.turret_i_crossbow.desc=Meant for basic defense and beginners. Not very strong but one of the cheapest to make.
 entity.sapturretmod.turret_i_shotgun.name=Shotgun Turret (T1)
-entity.sapturretmod.turret_i_shotgun.desc=A turret meant for basic crowd control. Very weak but can hit multiple targets at once, due to its ammo dispersing into multiple projectiles.
+entity.sapturretmod.turret_i_shotgun.desc=Used for basic crowd control. Very weak but can hit multiple targets at once, due to its ammo dispersing into multiple projectiles.
 entity.sapturretmod.turret_i_snowball.name=Cryolator Turret (T1)
-entity.sapturretmod.turret_i_snowball.desc=This turret is of the supporting kind, as its not dealing any damage, but will slow down any target that it hits. It'll only attack a target if it's not already slowed down, though.
+entity.sapturretmod.turret_i_snowball.desc=This one is of the supporting kind, as its not dealing any damage, but will slow down any target that it hits. It'll only attack a target if it's not already slowed down, though, to not waste ammo.
 entity.sapturretmod.turret_ii_revolver.name=Revolver Turret (T2)
-entity.sapturretmod.turret_ii_revolver.desc=This turret can be seen as the upgraded version of the Crossbow Turret, as it has more range, greater health and deals more damage, although with less knockback effect.
+entity.sapturretmod.turret_ii_revolver.desc=Can be seen as the upgraded version of the Crossbow Turret, as it has more range, greater health and deals more damage, although with less knockback effect.
 entity.sapturretmod.turret_ii_minigun.name=Minigun Turret (T2)
-entity.sapturretmod.turret_ii_minigun.desc=This turret deals low amounts of damage per projectile, but compensates for it with a rapid firing rate. Due to its high output, and since its shooting compartments aren't directly inside the head, it can store double the amount of rounds (512).
-
-sapturretmod.tinfo.ammo.arrow.name=Arrow Bolt
-sapturretmod.tinfo.ammo.arrow.desc=The standard ammo for the Crossbow Turret. Has a tiny knockback effect and acts like a standard arrow, just smaller. Very precise.\n\nCan be packaged, whose items will provide 16x ammo.
-sapturretmod.tinfo.ammo.sgshell.name=Shotgun Shell
-sapturretmod.tinfo.ammo.sgshell.desc=The standard ammo for the Shotgun Turret. Has no knockback effect and turns into 6 dispersed pebble projectiles when shot.\nDoes not apply any immunity to the target, thus targets hit by multiple pebbles will take damage from all of them.\n\nCan be packaged, whose items will provide 16x ammo.
-sapturretmod.tinfo.ammo.cryocell.name=Cryo Cell
-sapturretmod.tinfo.ammo.cryocell.desc=This ammunition used by the Cryolator Turret comes in 3 versions, which applies different slowness effects:\nCell SG1: Slowness I for 15s\nCell SG2: Slowness III for 10s\nCell SG3: Slowness V for 5s.\n\nDoes not apply immunity and any damage to the target.\n\nCan be packaged, whose items will provide 16x ammo.
-sapturretmod.tinfo.ammo.bullet.name=Revolver Bullets
-sapturretmod.tinfo.ammo.bullet.desc=Used by the Revolver Turret, it has the same knockback effect like the Shotgun projectiles, but do more damage than the Arrow bolts from the Crossbow Turret. Unlike other ammo types, this provides double the rounds.
-sapturretmod.tinfo.ammo.mgshell.name=Minigun Rounds
-sapturretmod.tinfo.ammo.mgshell.desc=This ammo contains seeds, which are used by the Minigun Turret. On their own they do little damage and no knockback, but like the shotgun pebbles, they do not apply any immunity to the target. This, in combination with the rapid firing rate of the turret, compensate for their weakness.
+entity.sapturretmod.turret_ii_minigun.desc=Deals low amounts of damage per projectile, but compensates for it with a rapid firing rate. Due to its high output, and since its shooting compartments aren't directly inside the head, it can store double the amount of rounds (512).
+entity.sapturretmod.turret_iii_laser.name=Laser Turret (T3)
+entity.sapturretmod.turret_iii_laser.desc=Going with the theme, this can be considered as the upgraded version of the Crossbow and Revolver Turret. With more health, higher damage and firing rate, this can burn anything alive. Except it is immune to fire, so be careful to not let it waste ammo on nether creatures (or upgrade it).
 
 gui.sapturretmod.tinfo.infoTitle=Info about this mod
 gui.sapturretmod.tinfo.category.turrets.name=Turrets
