* Mod now uses ForgeEnergy, unit (RF) will stay the same most likely, though  * Electrolyte Generator inventory revamp: now completely uses capabilities (except processing slots, but they're managed internally anyway)  * added permission system: other players cannot change turret settings, except they're the OP or the config says otherwise  * Purifier upgrade now has 1% chance of spawning fire instead of 10%  * removed try-catch from the Target Processor when getting a class from string  * extended dependency string to require Forge  * config screen now has separate buttons for config groups  * Turret Info translation not cached anymore, due to issues when reloading resources/language  * added translations for Fuel Purifier upgrade and Flamethrower Turret

--- a/src/main/resources/assets/sapturretmod/lang/en_US.lang
+++ b/src/main/resources/assets/sapturretmod/lang/en_US.lang
@@ -81,7 +81,7 @@ item.sapturretmod:turret_upgrade.health_iv.desc=This increases the maximum turre
 item.sapturretmod:turret_upgrade.reload_i.name=Reload I
 item.sapturretmod:turret_upgrade.reload_i.desc=When the turret shoots too slow for you, use this! It decreases the reload time by 15%%.\nBe careful with faster shooting turrets, mobs that get hit will get some kind of immunity aura that usually lasts a second. Those with that aura won't get hurt, thus wasting ammunition.
 item.sapturretmod:turret_upgrade.reload_ii.name=Reload II
-item.sapturretmod:turret_upgrade.reload_ii.desc=For even faster turrets, this decreases the reload time by an additional 35%% (50%% overall).
+item.sapturretmod:turret_upgrade.reload_ii.desc=For even faster turrets, this decreases the reload time by an additional 35%%.
 item.sapturretmod:turret_upgrade.upg_storage_i.name=Upgrade Storage I
 item.sapturretmod:turret_upgrade.upg_storage_i.desc=Need more upgrades for your turret but don't have any space? Use this, as it will increases the available upgrade slots by 9.
 item.sapturretmod:turret_upgrade.upg_storage_ii.name=Upgrade Storage II
@@ -99,7 +99,9 @@ item.sapturretmod:turret_upgrade.use_decr_ii.desc=Like its required upgrade, thi
 item.sapturretmod:turret_upgrade.use_decr_inf.name=Infinitas Oeconomia
 item.sapturretmod:turret_upgrade.use_decr_inf.desc=You want unlimited ammo? This upgrade recreates ammo automatically and infinitely by using the Infinity enchantment of the bow, so you'll never run out of it! There's a catch though: The turret must be filled to the max with rounds, or otherwise it will resort to the other Economy upgrades to reduce ammo usage.
 item.sapturretmod:turret_upgrade.ender_medium.name=Ender Gain Medium
-item.sapturretmod:turret_upgrade.ender_medium.desc=Laser turrets are cool, but since they deal fire based damage, they can't damage anything that is immune to fire. This upgrade replaces the standard redstone based gain medium with an ender pearl based one. The new frequency of the laser fired will inflict damage to anything with fire immunity and also does 25%% bonus damage to everything else.
+item.sapturretmod:turret_upgrade.ender_medium.desc=Laser turrets are cool, but since they deal fire based damage, they can't damage anything that is immune to fire. This upgrade replaces the standard redstone based gain medium with an ender pearl based one. The new frequency of the laser fired will inflict damage to anything with fire immunity and also adds bonus damage to everything else.
+item.sapturretmod:turret_upgrade.fuel_purifier.name=Fuel Purifier
+item.sapturretmod:turret_upgrade.fuel_purifier.desc=This acts as a catalyst to purify the fuel for the Flamethrower Turret. The flames will burn blue and damage anything, even fire-resistent entities, with a higher damage value. Be careful, though! Blocks hit by the flames may catch on fire.
 
 entity.sapturretmod.turret_i_crossbow.name=Crossbow Turret (T1)
 entity.sapturretmod.turret_i_crossbow.desc=Meant for basic defense and beginners. Not very strong but one of the cheapest to make.
@@ -113,6 +115,8 @@ entity.sapturretmod.turret_ii_minigun.name=Minigun Turret (T2)
 entity.sapturretmod.turret_ii_minigun.desc=Deals low amounts of damage per projectile, but compensates for it with a rapid firing rate. Due to its high output, and since its shooting compartments aren't directly inside the head, it can store double the amount of rounds (512).
 entity.sapturretmod.turret_iii_laser.name=Laser Turret (T3)
 entity.sapturretmod.turret_iii_laser.desc=Going with the theme, this can be considered as the upgraded version of the Crossbow and Revolver Turret. With more health, higher damage and firing rate, this can burn anything alive. Except it is immune to fire, so be careful to not let it waste ammo on nether creatures (or upgrade it).
+entity.sapturretmod.turret_iii_flamethrower.name=Flamethrower Turret (T3)
+entity.sapturretmod.turret_iii_flamethrower.desc=This turret deals large amounts of damage on a rather short distance. Not only that, but it operates in an area of effect, meaning it can hit multiple targets in front of it. Oh yeah, it deals fire damage if it wasn't obvious.
 
 gui.sapturretmod.tinfo.infoTitle=Info about this mod
 gui.sapturretmod.tinfo.category.turrets.name=Turrets
